--- a/.github/workflows/Recovery Build.yml
+++ b/.github/workflows/Recovery Build.yml
@@ -146,7 +146,10 @@ jobs:
       uses: pierotofy/set-swap-space@master
       with:
         swap-size-gb: 12
-
+    - name: Hot fix
+      run: |
+           sudo mv check_radio_versions.py ${{ steps.pwd.outputs.workspace-folder }}/build/make/tools/check_radio_versions.py
+           sudo chmod 777 ${{ steps.pwd.outputs.workspace-folder }}/build/make/tools/check_radio_versions.py
     - name: Building recovery
       run: |
         source build/envsetup.sh
